scrolling funtionality - serial port reader, websocket for gestures; shopping list managing functionality - view, template, js for managing through other device

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
-.idea
-__pycache__
-token.pickle
-migrations/
-credentials.json
+### virtual environment ###
 env
+
+### pycache ###
+__pycache__
+
+### IDE ###
+.idea
+
+### authorisation ###
+token.pickle
+credentials.json
+
+### database ###
+migrations
+*.sqlite3
+
 
 
